fix vertical alignment, 10em

--- a/src/app/childs/location/location-detail-only/location-detail-only.component.scss
+++ b/src/app/childs/location/location-detail-only/location-detail-only.component.scss
@@ -26,6 +26,6 @@
     }
   }
   div > div:first-child {
-    width: 15em;
+    width: 10em;
   }
 }
